--- a/src/components/ColorBox.css
+++ b/src/components/ColorBox.css
@@ -58,3 +58,59 @@
   text-align: center;
   text-transform: uppercase;
 }
+
+.copy-overlay {
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transform: scale(0.1);
+  transition: transform 0.6s ease-in-out;
+  z-index: 0;
+}
+
+.copy-overlay.show {
+  opacity: 1;
+  position: absolute;
+  transform: scale(50);
+  z-index: 10;
+}
+
+.copy-message {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  align-items: center;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  font-size: 4rem;
+  justify-content: center;
+  opacity: 0;
+  position: fixed;
+  transform: scale(0.1);
+}
+
+.copy-message.show {
+  opacity: 1;
+  transform: scale(1);
+  transition: all 0.4s ease-in-out;
+  transition-delay: 0.3s;
+  z-index: 25;
+}
+
+.copy-message h1 {
+  width: 100%;
+  margin-bottom: 0;
+  padding: 1rem;
+  background: rgba(255, 255, 255, 0.2);
+  font-weight: 400;
+  text-align: center;
+  text-transform: uppercase;
+  text-shadow: 2px 2px black;
+}
+
+.copy-message p {
+  font-weight: 100;
+  font-size: 2rem;
+}
