Add Palette footer

--- a/src/components/Palette.css
+++ b/src/components/Palette.css
@@ -1,7 +1,23 @@
 .Palette {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .Palette-colors {
   height: 90%;
+}
+
+.Palette-footer {
+  height: 5vh;
+  background: white;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  font-weight: bold;
+}
+
+.emoji {
+  margin: 0rem;
+  font-size: 1.5rem;
 }
