Add go-back button

--- a/src/components/ColorBox.css
+++ b/src/components/ColorBox.css
@@ -12,7 +12,12 @@
   height: 50%;
 }
 
-.copy-button {
+.ColorBox.go-back {
+  background: rgba(0, 0, 0, 0.9);
+}
+
+.copy-button,
+.back-button {
   width: 100px;
   height: 30px;
   margin-left: -50px;
@@ -26,10 +31,14 @@
   font-size: 1rem;
   line-height: 30px;
   outline: none;
-  opacity: 0;
   position: absolute;
   text-align: center;
+  text-decoration: none;
   text-transform: uppercase;
+}
+
+.copy-button {
+  opacity: 0;
 }
 
 .ColorBox:hover .copy-button {
