Adjust text colors based on luminance

--- a/src/components/ColorBox.css
+++ b/src/components/ColorBox.css
@@ -58,6 +58,14 @@
   text-transform: uppercase;
 }
 
+.light-text {
+  color: white;
+}
+
+.ColorBox .dark-text {
+  color: rgba(0, 0, 0, 0.5);
+}
+
 .see-more {
   width: 60px;
   height: 30px;
